--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "keywords": [
     "rpn",
     "rpn calculator",
-    "rpn typescript"
+    "rpn typescript",
+    "rpn calcultor in typescript"
   ],
   "author": "ruhaise k salim",
   "license": "MIT",
